[gd_scene load_steps=5 format=2]

[ext_resource path="res://asteroids/asteroid.gd" type="Script" id=1]
[ext_resource path="res://asteroids/asteroid_2/asteroid.png" type="Texture" id=2]
[ext_resource path="res://asteroids/asteroid_2/normal_map.png" type="Texture" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 1
polygon = PoolVector2Array( -32, -238, 35, -221, 63, -173, 123, -135, 189, -129, 229, -79, 256, -18, 240, 21, 213, 67, 185, 134, 159, 192, 107, 225, 55, 238, -10, 222, -42, 208, -93, 173, -139, 125, -187, 90, -247, 42, -256, -18, -229, -71, -214, -127, -169, -184, -118, -225 )

[node name="asteroid" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )

[node name="collision_polygon" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32, -238, 35, -221, 63, -173, 123, -135, 189, -129, 229, -79, 256, -18, 240, 21, 213, 67, 185, 134, 159, 192, 107, 225, 55, 238, -10, 222, -42, 208, -93, 173, -139, 125, -187, 90, -247, 42, -256, -18, -229, -71, -214, -127, -169, -184, -118, -225 )

[node name="light_occluder" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_asteroid_body_entered"]
